--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "start": "node index.js",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -14,9 +14,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express": "^5.1.0",
     "firebase": "^11.5.0",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.0.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
