--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "node index.js",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "start": "node index.js"
   },
   "engines": {
     "node": "22"
@@ -15,15 +10,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^5.1.0",
-    "firebase": "^11.5.0",
-    "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.0.1",
     "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
