--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "socket.io": "^4.8.1"
   }
 }
